--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
             </a>
           </div>
           <div class=NADIAMAXWIN>
-            <a href='https://bit.ly/nadia4dcantik' target=_blank rel="noopener noreferrer nofollow">
+            <a href='https://buktijackpotnadia4d.blogspot.com/' target=_blank rel="noopener noreferrer nofollow">
               <button class="btn2">
                 <strong>BETUL BETUL PECAH</strong>
                 <div id="container-stars">
@@ -351,9 +351,9 @@
                 </div>
               </button>
             </a>
-            <a href='https://bit.ly/nadia4dcantik' target=_blank rel="noopener noreferrer nofollow" class="btn1 contole">DAFTAR</a>
-            <a href='https://bit.ly/nadia4dcantik' target=_blank rel="noopener noreferrer nofollow" class="btn1 contole">LOGIN</a>
-            <a href='https://bit.ly/nadia4dcantik' target=_blank rel="noopener noreferrer nofollow" class="btn1 contole">LINK ALTERNATIF</a>
+            <a href='https://buktijackpotnadia4d.blogspot.com/' target=_blank rel="noopener noreferrer nofollow" class="btn1 contole">DAFTAR</a>
+            <a href='https://buktijackpotnadia4d.blogspot.com/' target=_blank rel="noopener noreferrer nofollow" class="btn1 contole">LOGIN</a>
+            <a href='https://buktijackpotnadia4d.blogspot.com/' target=_blank rel="noopener noreferrer nofollow" class="btn1 contole">LINK ALTERNATIF</a>
           </div>
         </div>
 
